# amazon_challenge

./: .gitignore  README.md  amazon_challenge.rosinstall  setup.py
data/: apc.json  hist.txt
data/object_models/amazon_cheeze/: amazon_cheeze.mtl
data/object_models/amazon_crayon/: amazon_crayon.mtl
data/object_models/amazon_duck/: amazon_duck.mtl
data/object_models/amazon_eggs/: amazon_eggs.mtl
data/object_models/amazon_frog/: amazon_frog.mtl
data/object_models/amazon_jokes/: amazon_jokes.mtl
data/object_models/amazon_notes/: amazon_card.mtl  amazon_notes.mtl  amazon_notes_SIFT.h5
data/object_models/amazon_oreo/: amazon_oreo.mtl
data/object_models/champion_copper_plus_spark_plug/: champion_copper_plus_spark_plug.mtl  dims.txt
data/object_models/cheezit_big_original/: cheezit_big_original.mtl  dims.txt
data/object_models/cookie_crisp/: cookie_crisp.mtl
data/object_models/crayola_64_ct/: crayola_64_ct.mtl  dims.txt
data/object_models/dr_browns_bottle_brush/: dims.txt  dr_browns_bottle_brush.blend  dr_browns_bottle_brush.blend1  dr_browns_bottle_brush.mtl
data/object_models/expo_dry_erase_board_eraser/: dims.txt  expo_dry_erase_board_eraser.blend1  expo_dry_erase_board_eraser.mtl
data/object_models/feline_greenies_dental_treats/: dims.txt  feline_greenies_dental_treats.blend  feline_greenies_dental_treats.blend1  feline_greenies_dental_treats.mtl
data/object_models/first_years_take_and_toss_straw_cup/: first_years_take_and_toss_straw_cup.mtl
data/object_models/genuine_joe_plastic_stir_sticks/: dims.txt  genuine_joe_plastic_stir_sticks.blend1  genuine_joe_plastic_stir_sticks.mtl
data/object_models/highland_6539_self_stick_notes/: dims.txt  highland_6539_self_stick_notes.mtl
data/object_models/kong_air_dog_squeakair_tennis_ball/: kong_air_dog_squeakair_tennis_ball.mtl
data/object_models/kong_duck_dog_toy/: dims.txt  kong_duck_dog_toy.blend  kong_duck_dog_toy.blend1  kong_duck_dog_toy.mtl
data/object_models/kong_sitting_frog_dog_toy/: kong_sitting_frog_dog_toy.blend  kong_sitting_frog_dog_toy.blend1  kong_sitting_frog_dog_toy.mtl
data/object_models/kyjen_squeakin_eggs_plush_puppies/: dims.txt  kyjen_squeakin_eggs_plush_puppies.blend  kyjen_squeakin_eggs_plush_puppies.mtl
data/object_models/laugh_out_loud_joke_book/: dims.txt  laugh_out_loud_joke_book.mtl
data/object_models/mark_twain_huckleberry_finn/: dims.txt  mark_twain_huckleberry_finn.blend  mark_twain_huckleberry_finn.blend1  mark_twain_huckleberry_finn.mtl
data/object_models/mead_index_cards/: dims.txt  mead_index_cards.blend  mead_index_cards.mtl
data/object_models/mommys_helper_outlet_plugs/: dims.txt  mommys_helper_outlet_plugs.blend  mommys_helper_outlet_plugs.blend1  mommys_helper_outlet_plugs.mtl
data/object_models/munchkin_white_hot_duck_bath_toy/: munchkin_white_hot_duck_bath_toy.mtl
data/object_models/oreo_mega_stuf/: dims.txt  oreo_mega_stuf.blend  oreo_mega_stuf.blend1  oreo_mega_stuf.mtl
data/object_models/paper_mate_12_count_mirado_black_warrior/: dims.txt  paper_mate_12_count_mirado_black_warrior.blend  paper_mate_12_count_mirado_black_warrior.blend1  paper_mate_12_count_mirado_black_warrior.mtl
data/object_models/rolodex_jumbo_pencil_cup/: dims.txt  rolodex_jumbo_pencil_cup.blend  rolodex_jumbo_pencil_cup.blend1  rolodex_jumbo_pencil_cup.mtl  rolodex_jumbo_pencil_cup_SIFT.h5
data/object_models/ros_fuerte/: ros_fuerte_SIFT.h5
data/object_models/ros_groovy_measureable/: ros_groovy_measureable.mtl
data/object_models/ros_hydro/: ros_hydro.mtl
data/object_models/safety_works_safety_glasses/: dims.txt  safety_works_safety_glasses.blend  safety_works_safety_glasses.mtl
data/object_models/sharpie_accent_tank_style_highlighters/: dims.txt  sharpie_accent_tank_style_highlighters.blend  sharpie_accent_tank_style_highlighters.blend1  sharpie_accent_tank_style_highlighters.mtl
data/object_models/shelf/: shelf.mtl
data/object_models/stanley_66_052/: dims.txt  stanley_66_052.blend  stanley_66_052.mtl
kinect_yasemin/: kinect_extrinsics_calib.launch  kinect_node.launch  kinect_node.launch.1  package.xml  yaseminExtrinsic.txt  yaseminParam.txt
kinect_yasemin/camera_info/: depth_B00366720055050B.yaml  rgb_B00366720055050B.yaml
kinect_yasemin/camera_info/marten_calib/: depth_B00366720055050B.yaml
kinect_yasemin/camera_info/temporary/: rgb_B00366720055050B.yaml
motion/: CMakeLists.txt  arm_position_server.py  example.py  my_pr2.py  package.xml
motion/calibrateBase/: baseMove.py  calibrateBase.py
rqt_amazon_challenge/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_amazon_challenge/resource/: pr2amazonchallenge.ui
rqt_amazon_challenge/scripts/: rqt_amazon_challenge
rqt_amazon_challenge/src/rqt_amazon_challenge/: pr2_amazon_challenge_plugin.py
samples/: tilt_scan_sample.txt
task_manager/: task_manager.py
vision/: CMakeLists.txt  package.xml  test_pcd.pcd
vision/config/: demo_objects.yaml  parameters.yaml  pr2_camera_topics.yaml  segmentation.yaml
vision/include/: DepthTraits.h  objectrecognition.h  objectsegmentation.h  utils.h
vision/launch/: calibrate_logitech.launch  camera_calib.txt  camera_logitech.launch  depth_to_cloud_node.launch  imax.launch  kinect_node.launch  laser_assembler.launch  logitech_pose_calib.launch  logitech_tf.launch  multi-rigid_pr2_head_mount_kinect.launch  multi-rigid_pr2_l_forearm.launch  multi-rigid_pr2_r_forearm.launch  pr2_cam_switch.launch  pr2_cam_switch_non_interfering.launch
vision/src/: cloud_publisher.cpp  laser_scanner_listener.cpp  laser_scanner_service.py  object_segmentation.cpp  object_segmentation.cpp.BACKUP.14807.cpp  object_segmentation.cpp.LOCAL.14807.cpp  object_segmentation.cpp.REMOTE.14807.cpp  object_segmentation_node.cpp  object_segmentation_node.cpp.orig  objectrecognition.cpp  objectrecognition.cpp.autosave  objectsegmentation.cpp  objectsegmentation.h  periodic_cloud_aggregator.cpp  periodic_cloud_test_client.cpp  segmentation_test_client.cpp  shelf_alignment.cpp  shelf_crop_tool.cpp  shelf_crop_tool.cpp.orig
vision/srv/: ReceiveCloud.srv  StartAggregator.srv
(+8 files in other folders)
